--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grapql-first-project",
+  "name": "graphql-first-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
